# atariusbprinter

./: .gitignore  CMakeLists.txt  atariusbprinter.code-workspace  pico_debug.sh  pico_usb_smoketest.sh  pico_usb_test.sh  usb_printer_driver_spec.md
.claude/: settings.local.json
cmake/: pico_pre_init.cmake  platform_linux.cmake  platform_rp2040.cmake
docs/: esc_tilde_reference.md  gpio_configuration.md  otf_to_escpos_guide.md
docs/testing/: escpos_hardware_test.md  escpos_line_tests.sh  escpos_rp2040_hardware_test.md  escpos_timeout_probe.sh  phase1_hardware_test.md  phase2_hardware_test.md  phase3_hardware_test.md  phase4_hardware_test.md  phase5_hardware_test.md  rp2040_hardware_test.md
include/generator/: EscpTextGenerator.h  EscposTextGenerator.h  ITextGenerator.h  PclTextGenerator.h  TextConfig.h  TsplTextGenerator.h
include/manager/: DeviceRecord.h  PrinterManager.h
include/protocol/: EscpHandler.h  EscposHandler.h  IProtocolHandler.h  PclHandler.h  PrintJob.h  ProtocolType.h  TsplHandler.h
include/sio/: AtasciiConverter.h  LineAssembler.h  SioCommandFrame.h  SioPrinterEmulator.h  SioProtocol.h
include/transport/: IHotplugCapable.h  IUsbTransport.h  UsbDeviceDescriptor.h
include/util/: Logger.h  RingBuffer.h
pico/usbprinter/: CMakeLists.txt
platform/linux/: FlashConfig.cpp  LinuxUsbTransport.cpp  LinuxUsbTransport.h  main_linux.cpp
platform/rp2040/: FlashConfig.cpp  FlashConfig.h  Rp2040UsbTransport.cpp  Rp2040UsbTransport.h  SioUart.cpp  SioUart.h  main_rp2040.cpp  main_rp2040_usb_test.cpp  posix_stubs.c  tusb_config.h
src/generator/: EscpTextGenerator.cpp  EscposTextGenerator.cpp  ITextGenerator.cpp  PclTextGenerator.cpp  TsplTextGenerator.cpp
src/manager/: PrinterManager.cpp
src/protocol/: EscpHandler.cpp  EscposHandler.cpp  PclHandler.cpp  TsplHandler.cpp
src/sio/: AtasciiConverter.cpp  LineAssembler.cpp  SioPrinterEmulator.cpp  SioProtocol.cpp
src/transport/: UsbDeviceDescriptor.cpp
src/util/: Logger.cpp
tests/: CMakeLists.txt  test_atascii_converter.cpp  test_escp_handler.cpp  test_escp_text_generator.cpp  test_escpos_handler.cpp  test_escpos_text_generator2.cpp  test_line_assembler.cpp  test_line_assembler_esc.cpp  test_pcl_handler.cpp  test_pcl_text_generator.cpp  test_printer_manager.cpp  test_ring_buffer.cpp  test_sio_printer_emulator.cpp  test_tspl_handler.cpp  test_tspl_text_generator.cpp
tests/mock/: MockSioPort.h  MockUsbTransport.cpp  MockUsbTransport.h
tools/: escpos_font_demo.py  otf_to_escpos.py
